# ChangeLog for dev-libs/xapian
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/ChangeLog,v 1.42 2010/06/26 15:03:58 nixnut Exp $

  26 Jun 2010; <nixnut@gentoo.org> xapian-1.0.20.ebuild:
  ppc stable #322285

*xapian-1.0.20 (29 Apr 2010)

  29 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +xapian-1.0.20.ebuild:
  Version bump.

*xapian-1.0.19 (23 Apr 2010)

  23 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -xapian-1.0.16.ebuild, +xapian-1.0.19.ebuild:
  Version bump.

  06 Jan 2010; Markus Meier <maekke@gentoo.org> xapian-1.0.17.ebuild:
  x86 stable, bug #297935

  28 Dec 2009; nixnut <nixnut@gentoo.org> xapian-1.0.17.ebuild:
  ppc stable #297935

*xapian-1.0.17 (22 Nov 2009)

  22 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -xapian-1.0.6.ebuild, -xapian-1.0.12.ebuild, +xapian-1.0.17.ebuild:
  Version bump.

  21 Nov 2009; Markus Meier <maekke@gentoo.org> xapian-1.0.16.ebuild:
  x86 stable, bug #289432

  24 Oct 2009; nixnut <nixnut@gentoo.org> xapian-1.0.16.ebuild:
  ppc stable #289432

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> xapian-1.0.6.ebuild:
  Remove virtual/libc

*xapian-1.0.16 (14 Sep 2009)

  14 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -xapian-0.9.6.ebuild, -xapian-0.9.9.ebuild, -xapian-1.0.10.ebuild,
  +xapian-1.0.16.ebuild:
  Version bump.

  01 May 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -files/xapian-0.9.2-config.patch, -files/xapian-0.9.3-config.patch,
  xapian-1.0.10.ebuild, xapian-1.0.12.ebuild:
  Remove not needed mirror statement, drop not anymore used patches

*xapian-1.0.12 (01 May 2009)

  01 May 2009; Gordon Malm <gengor@gentoo.org> xapian-1.0.10.ebuild,
  +xapian-1.0.12.ebuild:
  Version bump, use MY_P, add gentoo mirror to SRC_URI.

*xapian-1.0.10 (16 Jan 2009)

  16 Jan 2009; Jeroen Roovers <jer@gentoo.org> +xapian-1.0.10.ebuild: