@@ -1,8 +1,10 @@
 DIST xapian-core-1.0.17.tar.gz 2915371 RMD160 dff0f99151a68d036427535c3005fb003f5b39b8 SHA1 2504a834cbdb101b81e0f4638eb261a4d49c4e1b SHA256 c5a7b7c277536ffc8c28b750871e655e2908c227363adce04302a227dba5fe2b
 DIST xapian-core-1.0.19.tar.gz 3326887 RMD160 9dbc9ea87e8a86ed329d99835bbe113856bbfd7d SHA1 d9c3f174ee4d58d5606b067e78b7d16037c3e964 SHA256 a9974d0ddcdb11404481f5f240c8acd4674e96e1160ccf5e62e77f4eca741dca
 DIST xapian-core-1.0.20.tar.gz 3330688 RMD160 57b31f9444ee6329aca8fe7911a43b0307ee8249 SHA1 3c97a146e419a9e4a40d13e2a70519026c2d8af5 SHA256 f62b861ac7659c866e1f65eed183736c51305c8c29169d55eb7d3077436f2a70
+DIST xapian-core-1.2.2.tar.gz 3849005 RMD160 a56912884ff302f5da2545c80c7bcd81f3bddef4 SHA1 9e8036689650556428ecc605d03a695df561bfa6 SHA256 73227f53b6f2629ad09b79f8066315335ceb6cc9ab499f186a9c73f4b156df8c
 EBUILD xapian-1.0.17.ebuild 731 RMD160 d58707299f66658b7b26aad3667fd90dc4a04514 SHA1 4b4dd51076272454c739ee57e5c73478cfb48be9 SHA256 d3b0e16343763450824c4bf6c53fc565c747e5264421098f535e725938039fae
 EBUILD xapian-1.0.19.ebuild 735 RMD160 7d95ad0e7a08274c8be22708a0eca681a424bf04 SHA1 2e48a918be42a6fbfc1bafed2a293451eb301dc4 SHA256 2407c6786ed9b54b26903bc14f9e9c805b594e6e2b4042f1c565f88e8cc34096
 EBUILD xapian-1.0.20.ebuild 732 RMD160 a30825e5a889021296ec4b8f5e953425711b9343 SHA1 f3d7a774f593ae6906a090a75ef084fd490defe7 SHA256 9e60b2cf045ce9f2e4f344ec9186422b75d33083a760d5be958147998eb0304c
-MISC ChangeLog 6167 RMD160 c5b8a62c24825fcba8fd1c7687978e83e46fd8dd SHA1 0202103afe4f3b2f2038be86765f493bc37ddc35 SHA256 8f65f765b49ab5aa33a4f18bb8d60f079e29714ef71d9c17c4311691f4007c49
+EBUILD xapian-1.2.2.ebuild 734 RMD160 0d5c82642f3ccd48689046830ffb6207a77e57e9 SHA1 3c95c4006b179e6f9c062f6b53a4f4d46021ec17 SHA256 7adf47ff71233180aa3e3002be2995c9d9a337e0a355c36caac5f7a77c40dc8c
+MISC ChangeLog 6326 RMD160 2ea613dc59c1aaf78340cfeb1597b7913b945cd8 SHA1 248097dfeef3b5bad4955addbb767b940f30e53c SHA256 fd2ac9de3ef7111b615f8d2bf29849dc2f8392699c2fb05f4ddeb9743b7b2a19
 MISC metadata.xml 651 RMD160 8a0d3b5d28e8d3bececbad6f57bc737e40ef1ad8 SHA1 3f3ac3e66dce7073df57b20da8da5a6502f7812c SHA256 6d1348f63e60915533064f0b3786e27ecc6fcd9f2422e3fe7bdcab5a258881e2
