@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/xapian
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/ChangeLog,v 1.42 2010/06/26 15:03:58 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xapian/ChangeLog,v 1.43 2010/07/10 16:55:07 arfrever Exp $
+
+*xapian-1.2.2 (10 Jul 2010)
+
+  10 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +xapian-1.2.2.ebuild:
+  Version bump (bug #322405).
 
   26 Jun 2010; <nixnut@gentoo.org> xapian-1.0.20.ebuild:
   ppc stable #322285
